ignite-4374: list of checked options changed